welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:5: error: reassignment to val
	nbPas = nbPas + 1 
              ^Runner:9: error: reassignment to val
	nbPas = nbPas + 1
              ^